--- a/package.json
+++ b/package.json
@@ -111,6 +111,14 @@
             "default": [],
             "description": "Add additional params to the dbt build model command."
           },
+          "dbt.compileModelCommandAdditionalParams": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "default": [],
+            "description": "Add additional params to the dbt compile model command."
+          },
           "dbt.profilesDirOverride": {
             "type": "string",
             "description": "Override the profiles dir for every dbt command. Absolute path or relative to the directory containing profiles.yml"
